minor CSS updates, mainly hover effects and mobile adjustments

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             <li id="project-link"><a href="#projects"> Projects </a></li>
             <li id="writing-link"><a href="#writing"> Writing </a></li>
         </ul>
+        
     </nav>
+    
     <div class="about" id="about">
         <div id="contents">
             <div class="intro">
@@ -90,6 +92,7 @@
                 <li><a href="https://medium.com/@castagna.tm" target="_blank">Medium</a></li>
             </ul>
         </div>
+        <p>Lovingly built with JavaScript and SCSS</p>
     </div>
 </body>
 </html>
