--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
     <script type="text/javascript">
         (function(){
@@ -28,7 +29,7 @@
     </nav>
     
     <div class="about" id="about">
-        <div id="contents">
+        <div class="contents">
             <div class="intro">
                 <div class="header-grid">
                     <h1 class="intro-header-1"> Hi, </h1>
@@ -36,18 +37,18 @@
                 </div>
             </div>
             <div id="technologies">
-                <div class="text"> 
-                    <h2 class="welcome-h2"> Welcome to my site! </h2>
-                    <p> I am a full stack developer and software engineer experienced in JavaScript, React, CSS, SCSS, and HTML on the front end, and Ruby on Rails on the backend. </p>
-                    <p> However, I am very comfortable learning new stacks and am willing to learn and work with the stack that best suits the job. </p>
-                    <p> My priority as a developer is to focus on building clean, scalable code, and designing beautiful and intuitive interfaces.  </p>
-                    <p> Below, you'll find a list of the technologies I'm most familiar with, as well as a growing collection of some of my projects, as well as articles I've written throughout my coding journey.</p>
-                    <p> Currently learning: Node.js, and trying to not get distracted by other shiny frameworks and libraries along the way... </p>
+                <div class="description"> 
+                    <h2 class="welcome-h2"> Welcome to my site. </h2>
+                    <p> I am a full stack developer and software engineer experienced in JavaScript, React, CSS, SCSS, and HTML on the front end, and Ruby on Rails on the backend. 
+                        <br>I love building clean, scalable code, designing beautiful and intuitive interfaces,, .  
+                        <br>Below, you'll find a list of the technologies I'm most familiar with, as well as a growing collection of some of my projects, as well as articles I've written throughout my coding journey.
+                        <br>Currently learning: Node.js 
+                    </p>
                 </div>
                 <div class='grid'>
                     <div id='front-end'>
                         <h3>Front End Development</h3>
-                        <div id="text">
+                        <div class="text">
                             <p>JavaScript</p>
                             <p>React.js</p>
                             <p>CSS</p>
@@ -57,13 +58,13 @@
                     </div>
                     <div id='back-end'>
                         <h3>Back End Development</h3>
-                        <div id="text">
+                        <div class="text">
                             <p> Ruby on Rails </p>
                         </div>
                     </div>
                     <div id='tools'>
                         <h3>Tools</h3>
-                        <div id="text">
+                        <div class="text">
                             <p>Github</p>
                             <p>VSCode</p>
                         </div>
@@ -73,7 +74,7 @@
         </div>
     </div>
     <div class="projects" id="projects">
-        <div id="contents">
+        <div class="contents">
             <h1>Projects</h1>
             <div>
                 <ul id="projects-container"></ul>
@@ -81,19 +82,19 @@
         </div>
     </div>
     <div class="writing" id="writing">
-        <div id="contents">
+        <div class="contents">
             <h1>Writing</h1>
             <div>
                 <ul id="medium"></ul>
             </div>
         </div>
     </div>
-    <div id="contact">
+    <div class="contact">
         <div id="links">
             <ul>
-                <li><a href="https://www.linkedin.com/in/castagnatm/" target="_blank">LinkedIn</a></li>
-                <li><a href="https://github.com/CastagnaTM" target="_blank">Github</a></li>
-                <li><a href="https://medium.com/@castagna.tm" target="_blank">Medium</a></li>
+                <li><a href="https://www.linkedin.com/in/castagnatm/" target="_blank" rel="noopener">LinkedIn</a></li>
+                <li><a href="https://github.com/CastagnaTM" target="_blank" rel="noopener">Github</a></li>
+                <li><a href="https://medium.com/@castagna.tm" target="_blank" rel="noopener">Medium</a></li>
             </ul>
         </div>
         <p>Lovingly built with JavaScript and SCSS</p>
