color scheme updated

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script src="index.js"></script>
     <nav >
         <ul class="navigation">
-            <li id="about-link"><a href="#about"> About </a></li>
+            <li id="about-link"><a href="#about"> <img src='./Assets/logo-light.svg' alt='site logo'> About </a></li>
             <li id="project-link"><a href="#projects"> Projects </a></li>
             <li id="writing-link"><a href="#writing"> Writing </a></li>
         </ul>
@@ -34,16 +34,16 @@
                 <div class="header-grid">
                     <h1 class="intro-header-1"> Hi, </h1>
                     <h1 class="intro-header-2"> My name's Tom </h1>
+                    <p class="intro-subtitle"> &lt; Full Stack Developer // Software Engineer &gt; </p>
                 </div>
             </div>
             <div id="technologies">
                 <div class="description"> 
                     <h2 class="welcome-h2"> Welcome to my site. </h2>
-                    <p> I am a full stack developer and software engineer experienced in JavaScript, React, CSS, SCSS, and HTML on the front end, and Ruby on Rails on the backend. 
-                        <br>I love building clean, scalable code, designing beautiful and intuitive interfaces,, .  
-                        <br>Below, you'll find a list of the technologies I'm most familiar with, as well as a growing collection of some of my projects, as well as articles I've written throughout my coding journey.
-                        <br>Currently learning: Node.js 
-                    </p>
+                    <p> I am a full stack developer and software engineer experienced in JavaScript, React, CSS, SCSS, and HTML on the front end, and Ruby on Rails on the backend. </p>
+                    <p> I love building clean, scalable code, and designing beautiful and intuitive interfaces </p>  
+                    <p> Below, you'll find a list of the technologies I'm most familiar with, as well as a growing collection of some of my projects, as well as articles I've written throughout my coding journey. </p>
+                    <p> Currently learning: Node.js </p>
                 </div>
                 <div class='grid'>
                     <div id='front-end'>
