--- a/index.html
+++ b/index.html
@@ -40,10 +40,8 @@
             <div id="technologies">
                 <div class="description"> 
                     <h2 class="welcome-h2"> Welcome to my site. </h2>
-                    <p> I am a full stack developer and software engineer experienced in JavaScript, React, CSS, SCSS, and HTML on the front end, and Ruby on Rails on the backend. </p>
-                    <p> I love building clean, scalable code, and designing beautiful and intuitive interfaces </p>  
-                    <p> Below, you'll find a list of the technologies I'm most familiar with, as well as a growing collection of some of my projects, as well as articles I've written throughout my coding journey. </p>
-                    <p> Currently learning: Node.js </p>
+                    <p> I am a front end focused full stack developer and software engineer based in NY. </p>
+                    <p> As a developer, I leverage industry standard tools and development patterns to build clean, scalable code, and design beautiful and intuitive interfaces. </p>  
                 </div>
                 <div class='grid'>
                     <div id='front-end'>
