--- a/index.html
+++ b/index.html
@@ -9,93 +9,75 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-    <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
-    <script type="text/javascript">
-        (function(){
-            emailjs.init("user_4whQPTVSURqC2jWowZmOH");
-        })();
-    </script> -->
     <title>Tom Castagna</title>
 </head>
 <body>
-    <script src="index.js"></script>
-    <nav >
-        <ul class="navigation">
-            <li id="about-link"><a href="#about"> <img src='./Assets/logo-light.svg' alt='site logo'> About </a></li>
-            <li id="project-link"><a href="#projects"> Projects </a></li>
-            <li id="writing-link"><a href="#writing"> Writing </a></li>
+    <nav>
+        <ul class="navigation -about" id="nav">
+            <li ><a href="index.html" rel="noopener" class='link active' id="about-btn"> <img src='./Assets/logo-light.svg' alt='site logo'>About</a></li>
+            <li ><a href="projects.html" rel="noopener" class='link' id="projects-btn">Projects</a></li>
+            <li ><a href="articles.html" rel="noopener" class='link' id="articles-btn">Articles</a></li>
         </ul>
-        
     </nav>
-    
-    <div class="about" id="about">
-        <div class="contents">
-            <div class="intro">
-                <div class="header-grid">
-                    <h1 class="intro-header-1"> Hi, </h1>
-                    <h1 class="intro-header-2"> My name's Tom </h1>
-                    <p class="intro-subtitle"> &lt; Full Stack Developer // Software Engineer &gt; </p>
-                </div>
-            </div>
-            <div id="technologies">
-                <div class="description"> 
-                    <h2 class="welcome-h2"> Welcome to my site. </h2>
-                    <p> I am a front end focused full stack developer and software engineer based in NY. </p>
-                    <p> As a developer, I leverage industry standard tools and development patterns to build clean, scalable code, and design beautiful and intuitive interfaces. </p>  
-                </div>
-                <div class='grid'>
-                    <div id='front-end'>
-                        <h3>Front End Development</h3>
-                        <div class="text">
-                            <p>JavaScript</p>
-                            <p>React.js</p>
-                            <p>CSS</p>
-                            <p>SCSS</p>
-                            <p>HTML</p>
+    <div id='component'>
+        <div class="about" id="about">
+            <div class="contents">
+                <div class="intro">
+                    <div class="header-grid">
+                        <h1 class="intro-header-1"> Hi, </h1>
+                        <div class="intro-header-2"> 
+                            <h1 class='intro-name'>My name's Tom</h1> 
+                            <div class="intro-subtitle"> <p class='subtitle-1'>&lt;</p> <p class='subtitle-2'>Full Stack Developer</p> <p class='subtitle-center'>&nbsp;//&nbsp;</p> <p class='subtitle-3'>Software Engineer</p> <p class='subtitle-4'>&gt;</p> </div>
                         </div>
-                    </div>
-                    <div id='back-end'>
-                        <h3>Back End Development</h3>
-                        <div class="text">
-                            <p> Ruby on Rails </p>
-                        </div>
-                    </div>
-                    <div id='tools'>
-                        <h3>Tools</h3>
-                        <div class="text">
-                            <p>Github</p>
-                            <p>VSCode</p>
+                        <div class="social-links">
+                            <ul>
+                                <li><a href="https://github.com/CastagnaTM" target="_blank" rel="noopener"><img src='./assets/github.svg'></a></li>
+                                <li><a href="https://www.linkedin.com/in/castagnatm/" target="_blank" rel="noopener"> <img src='./assets/linkedin.svg'></a></li>
+                                <li><a href="https://medium.com/@castagna.tm" target="_blank" rel="noopener"><img src='./assets/medium.svg'></a>
+                            </ul>
                         </div>
                     </div>
                 </div>
+                <div id="technologies">
+                    <div class="description"> 
+                        <h2 class="welcome-h2"> Welcome to my site. </h2>
+                        <p> I am a front end focused full stack developer and software engineer based in NY. </p>
+                        <p> As a developer, I leverage industry standard tools and development patterns to build clean, scalable code, and design beautiful and intuitive interfaces. </p>  
+                    </div>
+                    <div class='grid'>
+                        <div id='front-end'>
+                            <h3>Front End Development</h3>
+                            <div class="text">
+                                <p>JavaScript</p>
+                                <p>React.js</p>
+                                <p>CSS</p>
+                                <p>SCSS</p>
+                                <p>gsap</p>
+                                <p>HTML</p>
+                            </div>
+                        </div>
+                        <div id='back-end'>
+                            <h3>Back End Development</h3>
+                            <div class="text">
+                                <p> Ruby on Rails </p>
+                            </div>
+                        </div>
+                        <div id='tools'>
+                            <h3>Tools</h3>
+                            <div class="text">
+                                <p>Github</p>
+                                <p>VSCode</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="projects" id="projects">
-        <div class="contents">
-            <h1>Projects</h1>
-            <div>
-                <ul id="projects-container"></ul>
-            </div>
-        </div>
-    </div>
-    <div class="writing" id="writing">
-        <div class="contents">
-            <h1>Writing</h1>
-            <div>
-                <ul id="medium"></ul>
-            </div>
-        </div>
-    </div>
-    <div class="contact">
-        <div id="links">
-            <ul>
-                <li><a href="https://www.linkedin.com/in/castagnatm/" target="_blank" rel="noopener">LinkedIn</a></li>
-                <li><a href="https://github.com/CastagnaTM" target="_blank" rel="noopener">Github</a></li>
-                <li><a href="https://medium.com/@castagna.tm" target="_blank" rel="noopener">Medium</a></li>
-            </ul>
-        </div>
+    <div class="contact -about">
         <p>Lovingly built with JavaScript and SCSS</p>
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
+    <script src="scripts/index.js"></script>
 </body>
 </html>
