made various changes to projects page, now preparing skills updates

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <title>Tom Castagna</title>
 </head>
@@ -31,9 +32,9 @@
                         </div>
                         <div class="social-links">
                             <ul>
-                                <li><a href="https://github.com/CastagnaTM" target="_blank" rel="noopener"><img src='./assets/github.svg'></a></li>
-                                <li><a href="https://www.linkedin.com/in/castagnatm/" target="_blank" rel="noopener"> <img src='./assets/linkedin.svg'></a></li>
-                                <li><a href="https://medium.com/@castagna.tm" target="_blank" rel="noopener"><img src='./assets/medium.svg'></a>
+                                <li id="gitLink"><a href="https://github.com/CastagnaTM" target="_blank" rel="noopener"><img src='./assets/github.svg' alt='github logo'></a></li>
+                                <li id="linkedinLink"><a href="https://www.linkedin.com/in/castagnatm/" target="_blank" rel="noopener"> <img src='./assets/linkedin.svg' alt='linkedin logo'></a></li>
+                                <li id="mediumLink"><a href="https://medium.com/@castagna.tm" target="_blank" rel="noopener"><img src='./assets/medium.svg' alt='medium logo'></a>
                             </ul>
                         </div>
                     </div>
@@ -41,9 +42,10 @@
                 <div id="technologies">
                     <div class="description"> 
                         <h2 class="welcome-h2"> Welcome to my site. </h2>
-                        <p> I am a front end focused full stack developer and software engineer based in NY. </p>
+                        <p> I am a full stack developer and software engineer based in NY. </p>
                         <p> As a developer, I leverage industry standard tools and development patterns to build clean, scalable code, and design beautiful and intuitive interfaces. </p>  
                     </div>
+                    <h1> Skills </h1>
                     <div class='grid'>
                         <div id='front-end'>
                             <h3>Front End Development</h3>
