converted skills section into columns of accordions

--- a/index.html
+++ b/index.html
@@ -46,10 +46,12 @@
                         <p> As a developer, I leverage industry standard tools and development patterns to build clean, scalable code, and design beautiful and intuitive interfaces. </p>  
                     </div>
                     <h1> Skills </h1>
-                    <div class='grid'>
+                    <div class='skills-section'>
                         <div id='front-end'>
-                            <h3>Front End Development</h3>
-                            <div class="text">
+                            <button class='accordion'>
+                                Front End Development
+                            </button>
+                            <div class="skills-column">
                                 <p>JavaScript</p>
                                 <p>React.js</p>
                                 <p>CSS</p>
@@ -59,14 +61,18 @@
                             </div>
                         </div>
                         <div id='back-end'>
-                            <h3>Back End Development</h3>
-                            <div class="text">
+                            <button class='accordion'>
+                                Back End Development
+                            </button>
+                            <div class="skills-column">
                                 <p> Ruby on Rails </p>
                             </div>
                         </div>
                         <div id='tools'>
-                            <h3>Tools</h3>
-                            <div class="text">
+                            <button class='accordion'>
+                                Tools
+                            </button>
+                            <div class="skills-column">
                                 <p>Github</p>
                                 <p>VSCode</p>
                             </div>
