re-organized accordions to be more open

--- a/index.html
+++ b/index.html
@@ -65,13 +65,14 @@
                                     <p>JWT Authentication</p>
                                     <p>API Consumption</p>
                                     <p>GSAP</p>
-                                    <button class='accordion'>React.js</button>
+                                </div>
+                                <button class='accordion'>React.js</button>
                                     <div class="skills-column" >
                                         <p>React Router</p>
                                         <p>Hooks</p>
                                         <p>Redux</p>
+                                        <p>Form Validation</p>
                                     </div>
-                                </div>
                                 <button class='accordion'>Design</button>
                                 <div class="skills-column">
                                     <p>CSS</p>
