minor tweaking to nested accordion layout

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                     <h1> Skills </h1>
                     <section class='skills-section'>
                         <div id='front-end'>
-                            <button class='accordion' id="accordion-main"> Front End Development </button>
-                            <div class="skills-column">
+                            <h3> Front End Development </h3>
+                            <div class="first-skills">
                                 <p>HTML</p>
                                 <button class='accordion'>JavaScript</button>
                                 <div class="skills-column" >
@@ -83,8 +83,8 @@
                             </div>
                         </div>
                         <div id='back-end'>
-                            <button class='accordion' id="accordion-main"> Back End Development </button>
-                            <div class="skills-column">
+                            <h3> Back End Development </h3>
+                            <div class="first-skills">
                                 <button class='accordion'> Ruby On Rails </button>
                                 <div class="skills-column">
                                     <p>REST APIs</p>
@@ -93,8 +93,8 @@
                             </div>
                         </div>
                         <div id='tools'>
-                            <button class='accordion' id="accordion-main"> Tools </button>
-                            <div class="skills-column">
+                            <h3> Tools </h3>
+                            <div class="first-skills">
                                 <p>Github</p>
                                 <p>VSCode</p>
                                 <p>Figma</p>
