updated margins for skills section for desktop and responsive

--- a/index.html
+++ b/index.html
@@ -54,51 +54,57 @@
                     <h1> Skills </h1>
                     <section class='skills-section'>
                         <div id='front-end'>
-                            <h3> Front End Development </h3>
-                            <div class="first-skills">
-                                <p>HTML</p>
-                                <button class='accordion'>JavaScript</button>
-                                <div class="skills-column" >
-                                    <p>ES6 Syntax</p>
-                                    <p>Form Validation</p>
-                                    <p>Single Page Applications</p>
-                                    <p>JWT Authentication</p>
-                                    <p>API Consumption</p>
-                                    <p>GSAP</p>
-                                </div>
-                                <button class='accordion'>React.js</button>
-                                    <div class="skills-column" >
-                                        <p>React Router</p>
-                                        <p>Hooks</p>
-                                        <p>Redux</p>
-                                        <p>Form Validation</p>
-                                    </div>
-                                <button class='accordion'>Design</button>
-                                <div class="skills-column">
-                                    <p>CSS</p>
-                                    <p>SCSS</p>
-                                    <p>Material-UI</p>
-                                    <p>Styled Components</p>
-                                </div>
-                            </div>
+                            <h2> Front End Development </h2>
+                            <ul class="first-skills">
+                                <li><p>HTML</p></li>
+                                <li>
+                                    <button class='accordion'>JavaScript</button>
+                                    <ul class="skills-column" >
+                                        <li><p>ES6 Syntax</p></li>
+                                        <li><p>Form Validation</p></li>
+                                        <li><p>Single Page Applications</p></li>
+                                        <li><p>JWT Authentication</p></li>
+                                        <li><p>API Consumption</p></li>
+                                        <li><p>GSAP</p></li>              
+                                    </ul>
+                                </li>
+                                <li>
+                                    <button class='accordion'>React.js</button>
+                                        <ul class="skills-column" >
+                                            <li> <p>React Router</p></li>
+                                            <li><p>Hooks</p></li>
+                                            <li><p>Redux</p></li>
+                                            <li><p>Form Validation</p></li>
+                                        </ul>
+                                </li>
+                                <li>
+                                    <button class='accordion'>Design</button>
+                                    <ul class="skills-column">
+                                        <li><p>CSS</p></li>
+                                        <li><p>SCSS</p></li>
+                                        <li><p>Material-UI</p></li>
+                                        <li><p>Styled Components</p></li>
+                                    </ul>
+                                </li>
+                            </ul>  
                         </div>
                         <div id='back-end'>
-                            <h3> Back End Development </h3>
-                            <div class="first-skills">
-                                <button class='accordion'> Ruby On Rails </button>
-                                <div class="skills-column">
-                                    <p>REST APIs</p>
-                                    <p>MVC Structure</p>
-                                </div>
-                            </div>
+                            <h2> Back End Development </h2>
+                            <ul class="first-skills">
+                                <li><button class='accordion'> Ruby On Rails </button></li>
+                                <ul class="skills-column">
+                                    <li><p>REST APIs</p></li>
+                                    <li><p>MVC Structure</p></li>
+                                </ul>
+                            </ul>
                         </div>
                         <div id='tools'>
-                            <h3> Tools </h3>
-                            <div class="first-skills">
-                                <p>Github</p>
-                                <p>VSCode</p>
-                                <p>Figma</p>
-                            </div>
+                            <h2> Tools </h2>
+                            <ul class="first-skills">
+                                <li><p>Github</p></li>
+                                <li><p>VSCode</p></li>
+                                <li><p>Figma</p></li>
+                            </ul>
                         </div>
                     </section>
                 </div>
