updated skills columns again to fix centering

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             </ul>
                         </div>
                         <div id='tools'>
-                            <h2> Tools </h2>
+                            <h2> Development Tools </h2>
                             <ul class="first-skills">
                                 <li><p>Github</p></li>
                                 <li><p>VSCode</p></li>
